solving a problem with empty input

--- a/src/components/bookCard.css
+++ b/src/components/bookCard.css
@@ -5,7 +5,9 @@
 	border-radius: 10px !important;
 	overflow: hidden;
 	color: #636364;   
+	margin-bottom: 30px;
 }
+
 .card-body {
 	padding: 0.5rem !important;	
 }
