--- a/src/components/bookCard.css
+++ b/src/components/bookCard.css
@@ -1,13 +1,21 @@
 .card {
-	width: 250px;	
-	border: 3px solid grey !important;
+	width: 300px;	
+	border: 3px solid #555e72 !important;
 	margin: 0 auto;
 	border-radius: 10px !important;
 	overflow: hidden;
-	color: #636364;   
+	color: #445678;   
 	margin-bottom: 30px;
+	font-family: Comic Sans MS, Helvetica, Arial, Sans-Serif;
 }
 
 .card-body {
 	padding: 0.5rem !important;	
+}
+
+hr {
+    border: none;
+    height: 1px;    
+    color: #2c885a; 
+    background-color: #2c885a; /* Modern Browsers */
 }
